[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time-helper"
version = "0.1.6"
description = "A Python time helper library"
readme = "readme.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=1.4.1",
    "numpy>=1.22.3",
    "pytz>=2022.1",
    "backports.zoneinfo>=0.2.1; python_version < '3.9'",
    "tzdata>=2022.1",
    "python-dateutil>=2.8.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["time_helper"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
